Fix text alignment in image modal

--- a/src/components/ImageModal.css
+++ b/src/components/ImageModal.css
@@ -5,7 +5,6 @@
   background-color: white;
 
   position: fixed;
-  /* top: 50%; */
   top: calc(var(--header-height));
   left: 50%;
   transform: translateX(-50%);
@@ -13,11 +12,11 @@
   grid-template-rows: 1fr 5fr 2fr;
   align-items: center;
   justify-content: center;
-  padding: var(--gap) 0;
+  padding: var(--gap);
+  text-align: center;
 }
 
 .modal-options {
-  /* height: 100%; */
 }
 
 .modal-image {
